# uv-k5-firmware

./: .gitignore  README.md  flake.nix  meson.build  meson_cross.ini
driver/: aes.c  backlight.c  backlight.h  bk1080.c  bk1080.h  bk4819-regs.h  bk4819.c  bk4819.h  crc.c  eeprom.c  gpio.c  gpio.h  i2c.c  i2c.h  keyboard.c  keyboard.h  meson.build  spi.c  spi.h  st7565.c  st7565.h  system.c  system.h  systick.c  systick.h
src/: board.c  board.h  frequencies.h  init.c  main.c  meson.build  misc.c  misc.h  radio.c  radio.h  scheduler.c  start.S
src/app/: listmenu.c  listmenu.h  main.c  main.h  meson.build  test.c  test.h  uart.c  vfo.c  vfo.h
src/ui/: fb.c  fb.h  main.c  main.h  meson.build  text.c  text.h
src/ui/font/: font_converter.py  font_terminus.h  meson.build
