sources += files(
    'audio.c',
    'bitmaps.c',
    'board.c',
    'dcs.c',
    'font.c',
    'frequencies.c',
    'functions.c',
    'init.c',
    'main.c',
    'misc.c',
    'radio.c',
    'scheduler.c',
    'settings.c',
    'version.c',

    'helper/battery.c',
    'helper/boot.c'
)

includes += include_directories('.')

subdir('app')
subdir('ui')
